--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "graphql": "^16.6.0",
+    "react-router-dom": "^6.4.1",
+    "redis": "^4.3.1",
+    "redux": "^4.2.0",
+    "socket.io": "^4.5.2",
+    "vue": "^3.2.39"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.1",
+    "eslint-plugin-react": "^7.31.8"
   }
 }
